client/style/style.css
.container {
  min-width: 320px;
  max-width: 600px;
}

.homepage {
   margin: 40px 0px 80px 0px;
}

.homepage ul {
  margin-top: 52px;
}

.homepage img {
  max-height: 700px;
}

.navbar-fixed-top {
  background-color: #FFF;
  border-top: 8px solid #162242;
  border-bottom: 1px solid #E8E8E8;
}

.navbar-brand {
  font-weight: 100;
  color: #0F0F0F;
}

.navbar-toggler {
  z-index: 1;
}

li.list-group-item {
  font: 1.5rem News Cycle;
  color: #000000;
  padding: 0.5rem 1.25rem;
  border: none;
}

li.list-group-item a {
  color: black;
}

.post {
  margin: 80px 0;
}

.post h1 {
  font: 4rem Raleway;
}

.post h6 {
  font: 1rem Raleway;
  color: silver;
  padding-bottom: 2rem;
}

.post .body {
  font: 1.25rem Archivo Narrow;
  text-align: justify
}

.post .body a:link {
  color: rgb(0,0,180);;
}

.post .body a:visited {
  color: navy;
}

#burger {
  display: none;
}

#navbar-menu {
  position: fixed;
  top: 63px;
  right: 0px;
  border-left: 1px solid rgb(232, 232, 232);
  border-bottom: 1px solid rgb(232, 232, 232);
}

code {
  padding: 0px;
}

@media (max-width: 991px) {
  #burger {
    display: inline;
  }

  #notburger {
    display: none;
  }

  .homepage, .homepage ul {
    margin: 5px 0px;
  }

  #navbar-menu {
    width: 100%;
    text-align: center;
    border-left: none;
  }
}

@media (min-height: 1081px) {
  .homepage {
    margin: 80px 0px;
  }
}

.page-appear, .page-enter {
  opacity: 0.01;
}

.page-appear.page-appear-active, .page-enter.page-enter-active {
  opacity: 1;
  transition: opacity 1s ease-in;
}

.text-appear, .text-enter {
  opacity: 0.01;
  transform: translate(0px, -15px);
}

.text-appear.text-appear-active, .text-enter.text-enter-active {
  opacity: 1;
  transform: translate(0px, 0px);
  transition-property: transform, opacity;
  transition-duration: 1000ms;
  transition-timing-function: ease-in-out;
}

